<resources>
    <string name="app_name">UIDesign</string>
    <string name="please_enter_your_account_here">Please enter your account here</string>
    <string name="email_or_phone_number">Email or phone number</string>
    <string name="password">Password</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="shop_women">Shop women</string>
    <string name="shop_men">Shop men</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in">Log In</string>
    <string name="modern">Modern</string>
    <string name="fashion">Fashion</string>
    <string name="aesthetic">Aesthetic</string>
    <string name="todo">TODO</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Login</string>
    <string name="or_continue_with">Or continue with</string>
    <string name="google">Google</string>
    <string name="don_t_have_any_account">Don\'t have any account?</string>
    <string name="sing_up">Sing Up</string>
</resources>